youfull/objects/X90DBP_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>CC_1_Field_Name__c</fullName>
        <label>CC+1 Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_2_Field_Name__c</fullName>
        <label>CC+2 Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_3_Field_Name__c</fullName>
        <label>CC+3 Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Field_Name__c</fullName>
        <label>CC Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Count__c</fullName>
        <label>Input Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Name__c</fullName>
        <label>KPI Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Field_Name__c</fullName>
        <label>PC Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance_Field_Name__c</fullName>
        <label>Variance Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCurrency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFuture__c</fullName>
        <label>isFuture</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isHeader__c</fullName>
        <label>isHeader</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>90Day Business Plan</label>
</CustomObject>